Resume spelling mistake.

--- a/misc/resume/resume.tex
+++ b/misc/resume/resume.tex
@@ -161,7 +161,7 @@
 \begin{tabularx}{\textwidth}{@{}p{2.2cm}|X@{}}
 
   \proj{Mobile Biomarkers}
-  {An iPhone application developed for the OSU Chemistry Deptartment built with
+  {An iPhone application developed for the OSU Chemistry Department built with
   \skill{Objective-C} and \skill{C++} to produce quantified results of
   chemically reactive slides.}
   {github.com/biomarkers}
