--- a/misc/resume/resume.tex
+++ b/misc/resume/resume.tex
@@ -45,9 +45,9 @@
 \setlength{\parskip}{0pt}
 \section{Biographical}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-  \textsc{Address}     & 529 NW 17\textsuperscript{th} St \\
-                       & Corvallis, Oregon 97330 \\
-  \textsc{Phone}       & 208-409-6177\\
+  \textsc{Mailing Address}     & 2495 E Heathfield Ct. \\
+                               & Eagle, ID 83616 \\
+  \textsc{Phone}               & 208-409-6177\\
 \end{tabularx}
 
 \vfill
@@ -73,9 +73,9 @@
 \section{Education}
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}r l p{5.5cm} r}
 
-  \degree{Expected March 2015}
+  \degree{March 2015}
   {B.S.}
-  {Computer Science (GPA: 3.86 / 4.0)}
+  {Computer Science \hspace{1mm} (GPA: 3.87 / 4.0)}
   {Oregon State University}
 
 \end{tabular*}
@@ -97,30 +97,39 @@
 \setlength\LTright{0pt}
 \vspace{-0.5em}
 \begin{longtable}{@{\extracolsep{\fill}} l | l r}
+  \experience{2015--Present}
+  {Research \& Development Intern}
+  {at}
+  {\href{http://wdi.disneycareers.com/en/default/}{Walt Disney Imagineering R\&D}}
+  {Building tools to aid in animatronic figure animation for eventual deployment
+  in theme parks. Developed \skill{SolidWorks} plugins in \skill{C\#} and
+  \skill{Autodesk Maya} plugins in \skill{Python} to analyze robot kinematics.}
 
-  \experience{2013--Present}
+  \experience{2013--2015}
   {Research Assistant}
   {at the}
   {\href{http://research.engr.oregonstate.edu/rdml/}{Robotic Decision Making Laboratory}}
-  {Researching low-cost solutions to cooperative autonomous exploration and
-  mapping tasks with micro-air vehicles. Developing and implementing robot
-  coordination algorithms using \skill{ROS}, \skill{C++}, and \skill{Python}.}
+  {Researched low-cost solutions to cooperative autonomous exploration and
+  mapping tasks with micro-air vehicles. Developed robot coordination algorithms
+  using \skill{ROS}, \skill{C++}, and \skill{Python}. Published \textit{Multi-UAV
+  Exploration with Limited Communication and Battery} in ICRA 2015 with shared
+  first-authorship.}
 
-  \experience{2013---Present}
+  \experience{2013---2015}
   {Team Lead}
   {of the}
   {\href{http://groups.engr.oregonstate.edu/osurc/}{OSU Aerial Robotics Team}}
-  {Coordinating team to construct a fully autonomous quadcopter for competition
-  in the International Aerial Robotics Competition.  Working with \skill{ROS},
-  \skill{Python}, and \skill{NumPy/SciPy} to build 3D navigation systems.  Using
-  \skill{C} and \skill{C++} to program real-time embedded flight controllers.}
+  {Coordinated large multi-disciplinary team to construct a fully autonomous
+  quadrotor. Worked with \skill{ROS}, \skill{Python}, and \skill{NumPy/SciPy} to
+  build 3D navigation systems. Used \skill{C} and \skill{C++} to program
+  real-time embedded flight control systems.}
 
   \experience{2013}
-  {Quality Assurance Engineer}
+  {Quality Assurance Engineer Intern}
   {at}
   {\href{http://www.suprasystems.com}{Supra}}
   {Built automated testing suites for web applications using \skill{Ruby}.
-   Overhauled existing testing stack to use \skill{RSpec}.  Built a web-based
+   Overhauled existing testing stack to use \skill{RSpec}. Built a web-based
    test runner using \skill{Ruby} and \skill{Sinatra}, with \skill{jQuery} on the
    front-end.}
 
@@ -129,16 +138,16 @@
   {at}
   {\href{http://r2dm.com}{R2 Digital Media}}
   {Led a team to build an educational game for Comcast using \skill{Unity3D},
-   \skill{JavaScript}, and \skill{C\#}.  Built instructive animations for Comcast
-   with \skill{Adobe Flash} and \skill{Adobe Captivate}.  Created interactive
-   simulations with \skill{ActionScript} and \skill{Adobe Flash}.}
+  \skill{JavaScript}, and \skill{C\#}. Built instructive animations for Comcast
+  with \skill{Adobe Flash} and \skill{Adobe Captivate}. Created interactive
+  simulations with \skill{ActionScript} and \skill{Adobe Flash}.}
 
   \experience{2011---2012}
   {Student}
   {in the}
-  {\href{http://engineering.oregonstate.edu/ar2011/\#page16}{Intel Open Source Learning Company}}
+  {\href{http://engineering.oregonstate.edu/2011anualreport/\#page16}{Intel Open Source Learning Company}}
   {Designed and implemented a project to use a genetic algorithm to find optimal
-  physical structure designs.  Worked with \skill{Git}, \skill{C\#},
+  physical structure designs. Worked with \skill{Git}, \skill{C\#},
   \skill{HTML5}, \skill{JavaScript}, and \skill{genetic algorithms}.}
 
 \end{longtable}
