--- a/misc/resume/resume.tex
+++ b/misc/resume/resume.tex
@@ -145,7 +145,7 @@
   \experience{2011---2012}
   {Student}
   {in the}
-  {\href{http://engineering.oregonstate.edu/2011anualreport/\#page16}{Intel Open Source Learning Company}}
+  {\href{http://engineering.oregonstate.edu/ar2011/\#page16}{Intel Open Source Learning Company}}
   {Designed and implemented a project to use a genetic algorithm to find optimal
   physical structure designs. Worked with \skill{Git}, \skill{C\#},
   \skill{HTML5}, \skill{JavaScript}, and \skill{genetic algorithms}.}
